更新隐私协议链接

--- a/root/privacy.html
+++ b/root/privacy.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- saved from url=(0063)https://wrx8192.github.io/static/privacy_agreement.html#privacy -->
+<!-- saved from url=(0063)https://zhangwelljan.github.io/privacy_docs/privacy.html#privacy -->
 <html lang="en" data-redeviation-bs-uid="24182"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     
 
@@ -231,9 +231,9 @@
             <div class="panel panel-default statement-content-cover">
                 <div class="main-statement-body" style="margin-bottom: 0;">
                     <ul class="menu">
-                        <li><a href="https://wrx8192.github.io/static/privacy_agreement.html#privacy">《隐私政策》</a></li>
-                        <li><a href="https://wrx8192.github.io/static/privacy_agreement.html#child_privacy">《儿童信息及隐私保护政策》</a></li>
-                        <li><a href="https://wrx8192.github.io/static/privacy_agreement.html#sdk">《集成的第三方SDK说明》</a></li>
+                        <li><a href="https://zhangwelljan.github.io/privacy_docs/privacy.html#privacy">《隐私政策》</a></li>
+                        <li><a href="https://zhangwelljan.github.io/privacy_docs/privacy.html#child_privacy">《儿童信息及隐私保护政策》</a></li>
+                        <li><a href="https://zhangwelljan.github.io/privacy_docs/privacy.html#sdk">《集成的第三方SDK说明》</a></li>
                     </ul>
                 </div>
             </div>
@@ -254,17 +254,17 @@
                     </div>
 
                     <div class="block-sub">
-                        <p><a href="https://wrx8192.github.io/static/privacy_agreement.html#privacy1" class="toPrivacyPart">一、名词解释</a></p>
-                        <p><a href="https://wrx8192.github.io/static/privacy_agreement.html#privacy2" class="toPrivacyPart">二、我们如何收集和使用您的个人信息</a></p>
-                        <p><a href="https://wrx8192.github.io/static/privacy_agreement.html#privacy3" class="toPrivacyPart">三、我们如何使用Cookie和同类技术</a></p>
-                        <p><a href="https://wrx8192.github.io/static/privacy_agreement.html#privacy4" class="toPrivacyPart">四、我们如何共享、转让、公开披露您的个人信息</a></p>
-                        <p><a href="https://wrx8192.github.io/static/privacy_agreement.html#privacy5" class="toPrivacyPart">五、我们如何储存和保护您的个人信息</a></p>
-                        <p><a href="https://wrx8192.github.io/static/privacy_agreement.html#privacy6" class="toPrivacyPart">六、您的权利</a></p>
-                        <p><a href="https://wrx8192.github.io/static/privacy_agreement.html#privacy7" class="toPrivacyPart">七、未成年人的个人信息保护</a></p>
-                        <p><a href="https://wrx8192.github.io/static/privacy_agreement.html#privacy8" class="toPrivacyPart">八、您的个人信息如何在全球范围转移</a></p>
-                        <p><a href="https://wrx8192.github.io/static/privacy_agreement.html#privacy9" class="toPrivacyPart">九、本政策如何修订</a></p>
-                        <p><a href="https://wrx8192.github.io/static/privacy_agreement.html#privacy10" class="toPrivacyPart">十、如何联系我们</a></p>
-                        <p><a href="https://wrx8192.github.io/static/privacy_agreement.html#privacy11" class="toPrivacyPart">十一、争议解决</a></p>
+                        <p><a href="https://zhangwelljan.github.io/privacy_docs/privacy.html#privacy1" class="toPrivacyPart">一、名词解释</a></p>
+                        <p><a href="https://zhangwelljan.github.io/privacy_docs/privacy.html#privacy2" class="toPrivacyPart">二、我们如何收集和使用您的个人信息</a></p>
+                        <p><a href="https://zhangwelljan.github.io/privacy_docs/privacy.html#privacy3" class="toPrivacyPart">三、我们如何使用Cookie和同类技术</a></p>
+                        <p><a href="https://zhangwelljan.github.io/privacy_docs/privacy.html#privacy4" class="toPrivacyPart">四、我们如何共享、转让、公开披露您的个人信息</a></p>
+                        <p><a href="https://zhangwelljan.github.io/privacy_docs/privacy.html#privacy5" class="toPrivacyPart">五、我们如何储存和保护您的个人信息</a></p>
+                        <p><a href="https://zhangwelljan.github.io/privacy_docs/privacy.html#privacy6" class="toPrivacyPart">六、您的权利</a></p>
+                        <p><a href="https://zhangwelljan.github.io/privacy_docs/privacy.html#privacy7" class="toPrivacyPart">七、未成年人的个人信息保护</a></p>
+                        <p><a href="https://zhangwelljan.github.io/privacy_docs/privacy.html#privacy8" class="toPrivacyPart">八、您的个人信息如何在全球范围转移</a></p>
+                        <p><a href="https://zhangwelljan.github.io/privacy_docs/privacy.html#privacy9" class="toPrivacyPart">九、本政策如何修订</a></p>
+                        <p><a href="https://zhangwelljan.github.io/privacy_docs/privacy.html#privacy10" class="toPrivacyPart">十、如何联系我们</a></p>
+                        <p><a href="https://zhangwelljan.github.io/privacy_docs/privacy.html#privacy11" class="toPrivacyPart">十一、争议解决</a></p>
                     </div>
 
                     <div class="block-sub">
@@ -545,7 +545,7 @@
                             </li>
                             <li><span>2、</span><b>我们会按照国家防沉迷政策要求，通过启用防沉迷系统保护未成年人的合法权益。我们会通过实名身份等信息校验判断相关账号的实名信息是否为未成年人，进而决定是否将此账号纳入到防沉迷体系中。另外我们会收集您的登录时间、游戏时长等信息进行判断并决定采取的防沉迷措施，引导未成年人合理游戏，帮助未成年人健康上网。</b>
                             </li>
-                            <li><span>3、</span><b>如果您是未满14周岁的未成年人，请您通知您的监护人共同阅读并接受我们的<a href="https://wrx8192.github.io/static/privacy_agreement.html#child_privacy" class="toPrivacyPart">《儿童信息及隐私保护政策》</a>并在您使用我司服务、提交个人信息之前，寻求其同意和指导。</b>
+                            <li><span>3、</span><b>如果您是未满14周岁的未成年人，请您通知您的监护人共同阅读并接受我们的<a href="https://zhangwelljan.github.io/privacy_docs/privacy.html#child_privacy" class="toPrivacyPart">《儿童信息及隐私保护政策》</a>并在您使用我司服务、提交个人信息之前，寻求其同意和指导。</b>
                             </li>
                         </ul>
                     </div>
@@ -584,7 +584,7 @@
                                     <li><span> (1) </span>通过我司官方网站公布的联系方式与我们联系；</li>
                                     <li><span> (2)
                                         </span>从具体App上产品功能页面中在线客服与其联系或者在线提交反馈意见（具体以App功能页面显示为准，部分单机游戏可能无该等按钮）；</li>
-                                    <li><span> (3) </span>写信至：深圳市宝安区西乡街道渔业社区名优采购中心B座1区109 法务部（收）；邮编：518100。</li>
+                                    <li><span> (3) </span>写信至：深圳市光明区玉塘街道田寮社区第三工业区15栋101（法务部收）；邮编：518000。</li>
                                 </ul>
                             </li>
                             <li>
@@ -605,7 +605,7 @@
                     <div class="block-sub" id="privacy11">
                         <p class="text-lead"><b>十一、争议解决</b></p>
                         <ul class="indentation">
-                            <li><span>1、</span><b>本《隐私政策》的订立、履行、解释及争议解决均应适用中华人民共和国大陆地区法律，并排除其他一切冲突法的适用。本《隐私政策》订立于深圳市宝安区。如双方就本《隐私政策》的内容、执行以及我们处理您个人信息事宜而引起任何争议，双方应友好协商解决；协商不成时，双方同意提交深圳市宝安区人民法院管辖并处理。</b>
+                            <li><span>1、</span><b>本《隐私政策》的订立、履行、解释及争议解决均应适用中华人民共和国大陆地区法律，并排除其他一切冲突法的适用。本《隐私政策》订立于深圳市光明区。如双方就本《隐私政策》的内容、执行以及我们处理您个人信息事宜而引起任何争议，双方应友好协商解决；协商不成时，双方同意提交深圳市光明区人民法院管辖并处理。</b>
                             </li>
                             <li><span>2、</span>如果您认为我们处理个人信息的行为损害了您的合法权益，您也可以选择向有关政府部门进行反映。</li>
                             <li><span>3、</span>本《隐私政策》的标题仅为方便及阅读而设，并不影响正文其中任何规定的含义或解释。</li>
@@ -640,7 +640,7 @@
                             <li><span>1、</span>在您使用我司服务的过程中，我们会严格履行法律法规规定的儿童个人信息保护义务。为了向您提供优质的服务并保障儿童的账户安全，我们仅会收集您同意我们收集的或您主动提供的有关儿童的个人信息。
                             </li>
                             <li>
-                                <span>2、</span>我们可能会收集儿童的个人信息的详情，请参见我司<a href="https://wrx8192.github.io/static/privacy_agreement.html#privacy" class="toPrivacyPart">《隐私政策》</a>。如果我们将您的信息用于本《儿童隐私政策》或我司《隐私政策》中未载明的其他用途，会事先征求您的同意。此外，根据相关法律法规及国家标准，以下情形中，收集或使用儿童个人信息而无需事先征得您的授权同意：
+                                <span>2、</span>我们可能会收集儿童的个人信息的详情，请参见我司<a href="https://zhangwelljan.github.io/privacy_docs/privacy.html#privacy" class="toPrivacyPart">《隐私政策》</a>。如果我们将您的信息用于本《儿童隐私政策》或我司《隐私政策》中未载明的其他用途，会事先征求您的同意。此外，根据相关法律法规及国家标准，以下情形中，收集或使用儿童个人信息而无需事先征得您的授权同意：
                                 <ul class="indentation">
                                     <li><span> (1) </span>与国家安全、国防安全直接相关的；</li>
                                     <li><span> (2) </span>与公共安全、公共卫生、重大公共利益直接相关的；</li>
